# fomin_cpp

./: CMakeLists.txt  README.md  Rect.h  bmp.cpp  bmp.h  complex.cpp  complex.h  main.cpp  vec.h
tests/: vec_test.cpp
